--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@fontsource/inter": "^5.0.16",
     "@mui/base": "^5.0.0-beta.30",
     "@mui/joy": "^5.0.0-beta.21",
+    "@types/lodash": "^4.14.202",
     "antd": "^5.12.8",
     "axios": "^1.6.4",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-intl": "^3.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -46,6 +51,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8",
     "prettier": "^3.1.1",
+    "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
