--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/lodash": "^4.14.202",
     "axios": "^1.6.4",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
