--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
     "@mui/base": "^5.0.0-beta.30",
+    "@tanstack/react-query": "^5.18.0",
     "@types/lodash": "^4.14.202",
     "axios": "^1.6.4",
     "clsx": "^2.1.0",
