--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "swr": "^2.2.4",
     "yup": "^1.3.3"
   },
