--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/system": "^5.15.7",
     "@tanstack/react-query": "^5.18.0",
     "@types/lodash": "^4.14.202",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.4",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.0",
@@ -31,7 +32,9 @@
     "react-icons": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "swr": "^2.2.4",
-    "yup": "^1.3.3"
+    "uuid": "^9.0.1",
+    "yup": "^1.3.3",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
